# TwoNote

./: .gitignore  CMakeLists.txt  README.md  TwoNote_en_US.ts  container.cpp  container.h  floattextedit.cpp  floattextedit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notetabwidget.cpp  notetabwidget.h  ribbonbar.cpp  ribbonbar.h  tabmainwidget.cpp  tabmainwidget.h
.github/workflows/: cmake-linux.yml  cmake.yml  codeql-analysis.yml
Documentation/: doxygen.conf
Documentation/docs/html/: annotated.html  annotated_dup.js  bug.html  class_container-members.html  class_container.html  class_container.js  class_context_menu-members.html  class_context_menu.html  class_context_menu.js  class_context_menu__inherit__graph.map  class_context_menu__inherit__graph.md5  class_float_image-members.html  class_float_image.html  class_float_image.js  class_float_image__inherit__graph.md5  class_float_text_edit-members.html  class_float_text_edit.html  (+127 more)
css/: ribbonButtons.css
docs/: _l_i_c_e_n_s_e.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_color_drop_down_menu-members.html  class_color_drop_down_menu.html  class_color_drop_down_menu.js  class_color_drop_down_menu__inherit__graph.map  class_color_drop_down_menu__inherit__graph.md5  class_color_well-members.html  class_color_well.html  class_color_well.js  class_color_well__inherit__graph.map  class_color_well__inherit__graph.md5  class_container.html  class_container.js  class_container__inherit__graph.map  class_container__inherit__graph.md5  class_context_menu-members.html  class_context_menu.html  class_float_image.html  class_float_image.js  class_float_image__inherit__graph.map  class_float_text_edit-members.html  class_float_text_edit.html  class_float_text_edit.js  class_float_text_edit__inherit__graph.map  class_main_window-members.html  class_main_window.html  class_main_window.js  class_main_window__inherit__graph.md5  class_my_library_1_1_example-members.html  class_my_library_1_1_example.html  class_my_library_1_1_example__inherit__graph.map  class_my_library_1_1_example__inherit__graph.md5  class_my_library_1_1_subclass_example-members.html  class_my_library_1_1_subclass_example.html  class_note_tab_widget-members.html  class_note_tab_widget.html  class_note_tab_widget__inherit__graph.map  (+135 more)
docs/search/: all_1.js  all_10.js  all_13.js  all_2.js  all_3.js  all_5.js  all_6.js  all_a.js  all_b.js  all_f.js  classes_0.js  classes_2.js  classes_4.js  classes_5.js  files_0.js  files_8.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js
doxygen/: doxygen-latex.conf  doxygen.conf
src/: CMakeLists.txt  TwoNote_en_US.ts  colordropdownmenu.cpp  colordropdownmenu.h  colorwell.cpp  colorwell.h  container.cpp  container.h  contextmenu.cpp  contextmenu.h  contextmenu.ui  floatimage.cpp  floatimage.h  floattextedit.cpp  floattextedit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notetabwidget.cpp  ribbonbar.cpp  ribbonbar.h  tabmainwidget.cpp  tabmainwidget.h  todolist.cpp  todolist.h
src/rsc/: rsc.qrc
(+42 files in other folders)
